--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,31 @@
 {
-  "name": "backend",
+  "name": "gym-management-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Gym Management System Backend API",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "migrate": "node scripts/migrate.js",
+    "seed": "pnpx sequelize-cli db:seed:all --seeders-path seeders",
+    "seed:undo": "pnpx sequelize-cli db:seed:undo:all --seeders-path seeders"
   },
   "keywords": [],
-  "author": "",
+  "author": "Shahriar Shakil",
   "license": "ISC",
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3"
