--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -2,7 +2,7 @@ FROM node:lts
 
 RUN npm install -g pnpm
 
-WORKDIR /app
+WORKDIR /src
 
 COPY backend/package.json backend/pnpm-lock.yaml ./
 RUN pnpm install --prod
