--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       context: .
       dockerfile: backend/Dockerfile.dev # or Dockerfile.prod
     volumes:
-      - ./backend:/app
-    working_dir: /app
+      - ./backend:/src
+    working_dir: /src
     ports:
       - "5000:5000"
     environment:
